start/hello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
    proxy_ssl_name socks.kub.loc;
    proxy_ssl_server_name on;
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - foo"
  name: hello-node
  namespace: kube-system
spec:
tls:
  - hosts:
    - socks.kub.loc
    secretName: testsecret-tls
  rules:
  - host: socks.kub.loc
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-node
          servicePort: 443
