start/hello-node.yaml
apiVersion: apps/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: hello-node-test-1
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: hello-node
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-node
        role: master
        tier: backend
    spec:
      containers:
      - name: hello-node
        image: vwarship/hello-world:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: hello-node-test-1
  labels:
    app: hello-node
    role: master
    tier: backend
spec:
  ports:
  - port: 80
    targetPort: 6379
  selector:
    app: hello-node
    role: master
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-node
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    ingress.kubernetes.io/ssl-redirect:
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    nginx.org/server-snippets: |
      location / {
        return 302 /coffee;
      }
spec:
  rules:
  - host: socks.kub.loc
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-node-test-1
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
